mobile adaptation completed. fix small bugs

--- a/privileges.html
+++ b/privileges.html
@@ -74,10 +74,97 @@
           </div>
         </div>
       </div>
+      <div class="container">
+        <div class="privileges-banner">
+          <ul class="privileges-banner__list">
+            <li class="privileges-banner__item">
+              <h3 class="privileges-banner__title">До&nbsp;35% по&nbsp;акции</h3>
+              <p class="privileges-banner__text">дополнительный доход по&nbsp;дебетовой карте</p>
+            </li>
+            <li class="privileges-banner__item">
+              <h3 class="privileges-banner__title">+2%&nbsp;надбавка</h3>
+              <p class="privileges-banner__text">по&nbsp;накопительному счету и&nbsp;+1% по вкладу</p>
+            </li>
+            <li class="privileges-banner__item">
+              <h3 class="privileges-banner__title">Газпром Бонус за&nbsp;0&nbsp;₽</h3>
+              <p class="privileges-banner__text">кино, продукты, топливо с&nbsp;выгодой</p>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <section class="privileges">
+      <div class="container">
+        <h2 class="privileges__title">Дебетовая карта с максимальной выгодой</h2>
+        <p class="privileges__text">при оформлении Привилегий &laquo;Стандарт&raquo; или &laquo;Плюс&raquo;</p>
+        <ul class="privileges__list">
+          <li class="privileges__item">
+            <div class="privileges-card">
+              <svg class="privileges-card__icon" width="32" height="32" aria-hidden="true">
+                <use xlink:href="images/sprite.svg#icon-percent"></use>
+              </svg>
+              <h3 class="privileges-card__title">Повышенный кэшбэк</h3>
+              <p class="privileges-card__description">5%&nbsp;на&nbsp;6&nbsp;популярных категорий + 1%&nbsp;на&nbsp;остальные покупки. Максимум&nbsp;&mdash; 5&nbsp;000 баллов каждый месяц. Дополнительный кэшбэк <a class="privileges-card__link" href="#">по&nbsp;акции&nbsp;+25%</a></p>
+            </div>
+          </li>
+          <li class="privileges__item">
+            <div class="privileges-card">
+              <svg class="privileges-card__icon" width="32" height="32" aria-hidden="true">
+                <use xlink:href="images/sprite.svg#icon-transaction"></use>
+              </svg>
+              <h3 class="privileges-card__title">Больше переводов без комиссии</h3>
+              <p class="privileges-card__description">150&nbsp;000 руб через СПБ и&nbsp;30&nbsp;000 руб по&nbsp;номеру карты каждый месяц</p>
+            </div>
+          </li>
+          <li class="privileges__item">
+            <div class="privileges-card">
+              <svg class="privileges-card__icon" width="32" height="32" aria-hidden="true">
+                <use xlink:href="images/sprite.svg#icon-coins"></use>
+              </svg>
+              <h3 class="privileges-card__title">Доход на&nbsp;остаток по&nbsp;карте</h3>
+              <p class="privileges-card__description">5%&nbsp;годовых на&nbsp;неснижаемый остаток по&nbsp;карте от&nbsp;30&nbsp;000 до&nbsp;100&nbsp;000&nbsp;руб. Дополнительный доход на&nbsp;остаток <a class="privileges-card__link" href="#">по&nbsp;акции&nbsp;+10%</a></p>
+            </div>
+          </li>
+          <li class="privileges__item">
+            <div class="privileges-card">
+              <svg class="privileges-card__icon" width="32" height="32" aria-hidden="true">
+                <use xlink:href="images/sprite.svg#icon-notifications"></use>
+              </svg>
+              <h3 class="privileges-card__title">Бесплатные уведомления</h3>
+              <p class="privileges-card__description">0&nbsp;руб за&nbsp;СМС об&nbsp;операциях по&nbsp;карте</p>
+            </div>
+          </li>
+          <li class="privileges__item">
+            <div class="privileges-card">
+              <svg class="privileges-card__icon" width="32" height="32" aria-hidden="true">
+                <use xlink:href="images/sprite.svg#icon-terminal"></use>
+              </svg>
+              <h3 class="privileges-card__title">Больше снятий наличных без комиссии</h3>
+              <p class="privileges-card__description">200&nbsp;000 руб каждый месяц в&nbsp;любых сторонних банкоматах</p>
+            </div>
+          </li>
+          <li class="privileges__item">
+            <div class="privileges-card">
+              <svg class="privileges-card__icon" width="32" height="32" aria-hidden="true">
+                <use xlink:href="images/sprite.svg#icon-phone"></use>
+              </svg>
+              <h3 class="privileges-card__title">Бесплатный платежный стикер</h3>
+              <p class="privileges-card__description">0&nbsp;руб обслуживание. Наклейте на&nbsp;телефон&nbsp;&mdash; платите бесконтактно</p>
+            </div>
+          </li>
+        </ul>
+        <div class="privileges-card privileges-card--promo">
+          <h3 class="privileges-card__title privileges-card__title--promo">Увеличьте доход</h3>
+          <p class="privileges-card__description privileges-card__description--promo">+25% кэшбэк и&nbsp;+10% на&nbsp;остаток по&nbsp;карте</p>
+          <picture class="privileges-card__picture">
+            <img class="privileges-card__img" src="images/profit-mobile.png" srcset="images/profit-mobile@2x.png 2x" width="125" height="84" alt="+25% кэшбэк и +10% на остаток по карте">
+          </picture>
+        </div>
+      </div>
     </section>
     <section class="bonus">
       <div class="container">
-        <h2 class="bonus__title">Улучшенные условия по&nbsp;другим продуктам банка</h2>
+        <h2 class="bonus__title">Улучшенные условия по другим продуктам банка</h2>
         <ul class="bonus__list">
           <li class="bonus__item">
             <a class="bonus-card" href="#">
@@ -262,10 +349,38 @@
                     <p class="connect__item-text">В&nbsp;детальной информации по&nbsp;карте в&nbsp;мобильном приложении</p>
                   </div>
                 </li>
+                <li class="connect__list-item">
+                  <div class="connect__item-content">
+                    <h3 class="connect__item-title">Активируйте Газпром Бонус за&nbsp;0&nbsp;₽</h3>
+                    <p class="connect__item-text">На&nbsp;экране Привилегий в&nbsp;карточке с&nbsp;предложением от&nbsp;партнера нажмите &laquo;Перейти в&nbsp;подписку&raquo;</p>
+                  </div>
+                </li>
               </ol>
             </div>
             <div class="connect__tabs-item">
               <!-- Как подключить привилегии. Вкладка "Уже есть карта" -->
+              <ol class="connect__list">
+                <li class="connect__list-item">
+                  <div class="connect__item-content">
+                    <p class="connect__item-text">Откройте приложение Газпромбанка и&nbsp;нажмите на&nbsp;дебетовую карту, к&nbsp;которой хотите подключить Привилегии</p>
+                  </div>
+                </li>
+                <li class="connect__list-item">
+                  <div class="connect__item-content">
+                    <p class="connect__item-text">На&nbsp;экране детальной информации по&nbsp;карте нажмите на&nbsp;&laquo;Газпромбанк Привилегии&raquo;</p>
+                  </div>
+                </li>
+                <li class="connect__list-item">
+                  <div class="connect__item-content">
+                    <p class="connect__item-text">Выберите уровень Привилегий &laquo;Стандарт&raquo; или &laquo;Плюс&raquo; и&nbsp;нажмите &laquo;Подключить&raquo;</p>
+                  </div>
+                </li>
+                <li class="connect__list-item">
+                  <div class="connect__item-content">
+                    <p class="connect__item-text">Активируйте на&nbsp;экране Привилегий подписку Газпром Бонус за&nbsp;0&nbsp;руб&nbsp;&mdash; зайдите в&nbsp;карточку с&nbsp;предложением от&nbsp;партнера и&nbsp;нажмите &laquo;Перейти в&nbsp;подписку&raquo;</p>
+                  </div>
+                </li>
+              </ol>
             </div>
           </div>
         </div>
@@ -285,22 +400,37 @@
             <p class="benefit__heading-text">В&nbsp;среднем от&nbsp;3&nbsp;000 руб в&nbsp;месяц! Активно пользуйтесь картой Газпромбанка и&nbsp;подпиской Газпром Бонус. Пример экономии:</p>
             <ul class="benefit__list">
               <li class="benefit__item">
-                <p class="benefit__text">~1&nbsp;344 руб при регулярных заказах в&nbsp;&laquo;Пятёрочке&raquo; и&nbsp;&laquo;Перекрёстке&raquo; на&nbsp;общую сумму 15&nbsp;000 руб в&nbsp;месяц</p>
+                <svg class="benefit__icon" width="20" height="20" aria-hidden="true">
+                  <use xlink:href="images/sprite.svg#icon-circle-check"></use>
+                </svg>
+                <p class="benefit__text">~1&nbsp;344 руб при регулярных заказах в&nbsp;&laquo;Пятёрочке&raquo; и&nbsp;&laquo;Перекрёстке&raquo; на&nbsp;общую сумму 15&nbsp;000 руб в&nbsp;месяц</p>
               </li>
               <li class="benefit__item">
-                <p class="benefit__text">~448 руб&nbsp;&mdash; онлайн-кинотеатр PREMIER и&nbsp;курьерская доставка 1 заказа Ozon</p>
+                <svg class="benefit__icon" width="20" height="20" aria-hidden="true">
+                  <use xlink:href="images/sprite.svg#icon-circle-check"></use>
+                </svg>
+                <p class="benefit__text">~448 руб&nbsp;&mdash; онлайн-кинотеатр PREMIER и&nbsp;курьерская доставка 1&nbsp;заказа Ozon</p>
               </li>
               <li class="benefit__item">
-                <p class="benefit__text">~1&nbsp;300 руб при покупках на&nbsp;общую сумму 10&nbsp;000 руб в&nbsp;месяц в&nbsp;&laquo;Ленте&raquo;</p>
+                <svg class="benefit__icon" width="20" height="20" aria-hidden="true">
+                  <use xlink:href="images/sprite.svg#icon-circle-check"></use>
+                </svg>
+                <p class="benefit__text">~1&nbsp;300 руб при покупках на&nbsp;общую сумму 10&nbsp;000 руб в&nbsp;месяц в&nbsp;&laquo;Ленте&raquo;</p>
               </li>
               <li class="benefit__item">
-                <p class="benefit__text">~195 руб при покупке 90 л&nbsp;топлива и&nbsp;3 чашек кофе по&nbsp;200 руб на&nbsp;АЗС &laquo;Газпромнефть&raquo;</p>
+                <svg class="benefit__icon" width="20" height="20" aria-hidden="true">
+                  <use xlink:href="images/sprite.svg#icon-circle-check"></use>
+                </svg>
+                <p class="benefit__text">~195 руб при покупке 90&nbsp;л топлива и&nbsp;3&nbsp;чашек кофе по&nbsp;200 руб на&nbsp;АЗС &laquo;Газпромнефть&raquo;</p>
               </li>
               <li class="benefit__item">
-                <p class="benefit__text">149 руб&nbsp;&mdash; СМС-уведомления и&nbsp;обслуживание стикера</p>
+                <svg class="benefit__icon" width="20" height="20" aria-hidden="true">
+                  <use xlink:href="images/sprite.svg#icon-circle-check"></use>
+                </svg>
+                <p class="benefit__text">149 руб&nbsp;&mdash; СМС-уведомления и&nbsp;обслуживание стикера</p>
               </li>
             </ul>
-            <p class="benefit__bottom-text">А&nbsp;еще +2&nbsp;000 руб кэшбэк, экономия 700 руб на&nbsp;комиссии за&nbsp;переводы, 1&nbsp;000 руб на&nbsp;снятии наличных и&nbsp;многое другое</p>
+            <p class="benefit__bottom-text">А&nbsp;еще +2&nbsp;000 руб кэшбэк, экономия 700 руб на&nbsp;комиссии за&nbsp;переводы, 1&nbsp;000 руб на&nbsp;снятии наличных и&nbsp;многое другое</p>
           </div>
         </div>
       </div>
