complete desktop-lg adaptation, fix .privileges__line margin optimal, fix footer bug

--- a/privileges.html
+++ b/privileges.html
@@ -108,7 +108,7 @@
                 <use xlink:href="images/sprite.svg#icon-percent"></use>
               </svg>
               <h3 class="privileges-card__title">Повышенный кэшбэк</h3>
-              <p class="privileges-card__description">5%&nbsp;на&nbsp;6&nbsp;популярных категорий + 1%&nbsp;на&nbsp;остальные покупки. Максимум&nbsp;&mdash; 5&nbsp;000 баллов каждый месяц. Дополнительный кэшбэк <a class="privileges-card__link" href="#">по&nbsp;акции&nbsp;+25%</a></p>
+              <p class="privileges-card__description privileges-card__description--desktop-lg">5%&nbsp;на&nbsp;6&nbsp;популярных категорий + 1%&nbsp;на&nbsp;остальные покупки. Максимум&nbsp;&mdash; 5&nbsp;000 баллов каждый месяц. Дополнительный кэшбэк <a class="privileges-card__link" href="#">по&nbsp;акции&nbsp;+25%</a></p>
             </div>
           </li>
           <li class="privileges__item">
