--- a/privileges.html
+++ b/privileges.html
@@ -76,6 +76,7 @@
         </div>
       </div>
       <div class="container">
+        <h2 class="visually-hidden">Основные привилегии Газпромбанка</h2>
         <div class="privileges-banner">
           <ul class="privileges-banner__list">
             <li class="privileges-banner__item">
